[package]
name = "gloo_macros"
version = "0.1.3"
edition = "2024"
description = "Macros for the Supergloo library, providing path-based routing and other utilities."
license = "MIT OR Apache-2.0"
authors = ["Eoin Mitchell eoinmitchell39@proton.me"]
repository = "https://github.com/swerve731/supergloo" 

[lib]
proc-macro = true

[dependencies]
inventory = "0.3.20"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["extra-traits", "fold", "full"] }
once_cell = "1.21.3"
