[package]
name = "supergloo"
version = "0.1.3"
edition = "2024"
description = "A library for rapid development of web applications in Rust and axum, with a focus on ease of use and flexibility through path based routes."
license = "MIT OR Apache-2.0"
authors = ["Eoin Mitchell eoinmitchell39@proton.me"]
repository = "https://github.com/swerve731/supergloo" # Link to your repo (optional but good practice)
keywords = ["web", "axum", "supergloo", "routing", "easy"]


[dependencies]
axum = { version = "0.8.3", features = ["macros", "tracing"] }
derive_more = { version = "2.0.1", features = ["full"] }
inventory = "0.3.20"
gloo_macros = "0.1.4"
async-trait = "0.1.88"
maud = "0.27.0"

# gloo_macros = {path = "../macros"}
futures = "0.3.31"
